--- a/app/src/main/res/layout/itemsgrid.xml
+++ b/app/src/main/res/layout/itemsgrid.xml
@@ -1,82 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="5dp"
-    android:layout_height="match_parent">
+    app:cardCornerRadius="5dp"
+    app:cardBackgroundColor="@android:color/white"
+    android:layout_margin="10dp"
+    app:cardElevation="8dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="190dp"
-        android:layout_height="250dp"
-        android:layout_marginLeft="10dp"
-        app:cardCornerRadius="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="150dp"
+            android:id="@+id/image"
+            android:scaleType="fitXY"
+            android:src="@drawable/mahakota3"
+            tools:ignore="ContentDescription" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/title"
+            android:textColor="@android:color/black"
+            android:textSize="21sp"
+            android:text="Judul"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="10dp"
+            tools:ignore="HardcodedText" />
 
-            <ImageView
-                android:id="@+id/imgfotos"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/koteka"
-                tools:ignore="ContentDescription" />
-            <TextView
-                android:id="@+id/txtkilometer"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="   km"
-                android:background="@drawable/warnagrid"
-                android:layout_marginTop="-30dp"
-                android:padding="2dp"
-                android:layout_marginStart="10dp"
-                tools:ignore="HardcodedText" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/desc"
 
-            <TextView
-                android:id="@+id/txtjuduls"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Judul"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textColor="#000"
-                android:layout_marginLeft="10dp"
-                android:textSize="16sp"
-                tools:ignore="HardcodedText,RtlHardcoded" />
+            android:text="Desc"
+            android:textSize="18sp"
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            tools:ignore="HardcodedText" />
 
-            <!-- Text View for Description -->
-            <TextView
-                android:id="@+id/txthargas"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:text="Harga"
-                android:layout_marginLeft="10dp"
-                android:textColor="#555"
-                android:textSize="14sp"
-                tools:ignore="HardcodedText,RtlHardcoded" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/tambahs"
-                android:layout_marginStart="150dp"
-                android:layout_marginTop="-40dp"
-                tools:ignore="ContentDescription" />
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="25dp"
-                android:src="@drawable/like"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="142dp"
-                tools:ignore="ContentDescription,VisualLintBounds" />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-</RelativeLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
