--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -6,28 +6,130 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomepageActivity">
-    <ImageView
+    <RelativeLayout
+        android:id="@+id/hedarview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/background_card_menu"
+        android:elevation="5dp"
+        >
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/background_card_menu"
+            />
+        <ImageView
+            android:id="@+id/imgbacks"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/back"
+            android:elevation="7dp"
+            android:paddingStart="10dp"
+            android:layout_marginTop="10dp"
+            tools:ignore="ContentDescription,RtlSymmetry" />
+        <ImageView
+            android:id="@+id/imgpilihan"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/imglogos"
+            android:src="@drawable/pilihan"
+            tools:ignore="ContentDescription" />
+        <ImageView
+            android:id="@+id/imglogos"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logoh"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="5dp"
+            tools:ignore="ContentDescription" />
+    </RelativeLayout>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/homepages"
-        />
+        android:layout_below="@id/hedarview"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp">
 
-    <ImageView
-        android:id="@+id/logoutto"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="315dp"
-        android:src="@drawable/logout"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/sharetovia"
-        android:layout_width="wrap_content"
+            <!-- Your other content within ScrollView -->
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/cari"
+                tools:ignore="ContentDescription" />
+
+        </LinearLayout>
+    </ScrollView>
+    <GridView
+        android:id="@+id/papuans"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:horizontalSpacing="6dp"
+        android:numColumns="2"
+        android:layout_marginTop="280dp"
+        android:verticalSpacing="6dp" />
+
+    <RelativeLayout
+        android:id="@+id/footerview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/inbx"
-        android:layout_marginTop="670dp"
-        android:layout_marginLeft="185dp"
-        />
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/background_card_menu"
+        android:elevation="10dp"
+        >
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/background_card_menu"
+            />
 
+        <ImageView
+            android:id="@+id/imgberandas"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="30dp"
+            android:elevation="7dp"
+            android:src="@drawable/beranda2"
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
+        <ImageView
+            android:id="@+id/imgkeranjangs"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="30dp"
+            android:layout_toEndOf="@id/imgberandas"
+            android:elevation="7dp"
+            android:src="@drawable/keranjang1"
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+        <ImageView
+            android:id="@+id/imgpesans"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/pesans1"
+            android:layout_marginTop="10dp"
+            android:elevation="7dp"
+            android:layout_toEndOf="@id/imgkeranjangs"
+            android:layout_marginStart="30dp"
+            tools:ignore="ContentDescription" />
+        <ImageView
+            android:id="@+id/imgakuns"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/akun1"
+            android:layout_marginTop="10dp"
+            android:elevation="7dp"
+            android:layout_toEndOf="@id/imgpesans"
+            android:layout_marginStart="30dp"
+            tools:ignore="ContentDescription" />
+    </RelativeLayout>
 
 </RelativeLayout>
