--- a/app/src/main/res/layout/activity_sharepage.xml
+++ b/app/src/main/res/layout/activity_sharepage.xml
@@ -7,6 +7,47 @@
     android:layout_height="match_parent"
     tools:context=".SharepageActivity"
     >
+    <RelativeLayout
+        android:id="@+id/hedarview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/background_card_menu"
+        android:elevation="5dp"
+        >
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/background_card_menu"
+            />
+        <ImageView
+            android:id="@+id/imgbacks"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/back"
+            android:elevation="7dp"
+            android:paddingStart="10dp"
+            android:layout_marginTop="10dp"
+            tools:ignore="ContentDescription,RtlSymmetry" />
+        <ImageView
+            android:id="@+id/imgpilihan"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/imglogos"
+            android:src="@drawable/pilihan"
+            tools:ignore="ContentDescription" />
+        <ImageView
+            android:id="@+id/imglogos"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logoh"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="5dp"
+            tools:ignore="ContentDescription" />
+    </RelativeLayout>
+
 
     <ImageView
         android:layout_width="401dp"
@@ -28,32 +69,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:src="@drawable/profile"
         tools:ignore="ContentDescription,ImageContrastCheck" />
-    <TextView
-        android:id="@+id/kontakh1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CONTACT US:"
-        android:layout_marginStart="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:layout_below="@id/myprofile"
-        android:fontFamily="@font/poppinssemibold"
-        android:textSize="30sp"
-        tools:ignore="HardcodedText" />
+
 
     <TextView
         android:id="@+id/nama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/kontakh1"
+        android:layout_below="@id/myprofile"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/poppinssemibold"
         android:text="Nama Lengkap:"
-        android:textSize="15sp"
+        android:textSize="13sp"
         tools:ignore="HardcodedText,TextSizeCheck" />
     <EditText
         android:id="@+id/inputnama"
@@ -64,7 +95,7 @@
         android:layout_marginLeft="30dp"
         android:layout_below="@id/nama"
         android:layout_marginRight="30dp"
-        android:textSize="17sp"
+        android:textSize="12sp"
         tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextFields,TextContrastCheck,VisualLintTextFieldSize"
         />
 
@@ -77,7 +108,7 @@
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/poppinssemibold"
         android:text="Nomor Telepon:"
-        android:textSize="15sp"
+        android:textSize="13sp"
         tools:ignore="HardcodedText,TextSizeCheck" />
 
     <EditText
@@ -90,7 +121,7 @@
         android:inputType="number"
         android:layout_marginRight="30dp"
         android:layout_below="@id/telepon"
-        android:textSize="17sp"
+        android:textSize="12sp"
         tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextFields,TextContrastCheck,VisualLintTextFieldSize"
         />
 
@@ -103,7 +134,7 @@
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/poppinssemibold"
         android:text="Pesan anda:"
-        android:textSize="15sp"
+        android:textSize="13sp"
         tools:ignore="HardcodedText,TextSizeCheck" />
 
     <EditText
@@ -116,8 +147,9 @@
         android:gravity="start|top"
         android:hint="Masukkan pesan di sini..."
         android:inputType="textMultiLine"
-        android:lines="5"
+        android:lines="2"
         android:maxLines="7"
+        android:textSize="12dp"
         android:scrollbars="vertical"
         android:textColorHint="#78909C"
         tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />
@@ -200,4 +232,56 @@
            android:src="@drawable/fbs"
            tools:ignore="ContentDescription" />
    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/footerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/background_card_menu"
+        android:elevation="10dp"
+        >
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/background_card_menu"
+            />
+        <ImageView
+            android:id="@+id/imgberandas"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/beranda1"
+            android:elevation="7dp"
+            android:layout_marginStart="30dp"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/imgkeranjangs"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="30dp"
+            android:layout_toEndOf="@id/imgberandas"
+            android:elevation="7dp"
+            android:src="@drawable/keranjang1"
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+        <ImageView
+            android:id="@+id/imgpesans"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/pesans2"
+            android:elevation="7dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/imgkeranjangs"
+            android:layout_marginStart="30dp"
+            tools:ignore="ContentDescription" />
+        <ImageView
+            android:id="@+id/imgakuns"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/akun1"
+            android:elevation="7dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/imgpesans"
+            android:layout_marginStart="30dp"
+            tools:ignore="ContentDescription" />
+    </RelativeLayout>
 </RelativeLayout>
